--- a/pipeline.yml
+++ b/pipeline.yml
@@ -3,7 +3,7 @@ messenger:
   type: fake
 
 pipeline:
-  - stage_name: Download remote files
+  - stage: Download remote files
     command: bundle exec rake download
-  - stage_name: Calc sha256
+  - stage: Calc sha256
     command: shasum -a 256 archives/*/* > sha256.txt
